helm/certs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingressrule
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # reference production issuer
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - labs.albert-hahn-apply.com
    # reference secret for production TLS certificate
    secretName: deploy-secret
  rules:
    - host: labs.albert-hahn-apply.com
      http:
        paths:
          - path: /
            backend:
              serviceName: test-kubeview
              servicePort: 80
